# yet-another-sign-up

./: .gitignore  CMakeLists.txt  README.md  adminpanel.cpp  adminpanel.h  adminpanel.ui  arbiter.cpp  arbiter.h  arbiter.ui  config  facerecognition.cpp  facerecognition.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resourses.qrc  signup.cpp  signup.h
cfg/: config
